# Flask-Authorization

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
flask_authorization/: __init__.py  decorators.py  main.py
