[tool.poetry]
name = "flask-authorization"
version = "1.3"
description = "Simple user authorization to use alongside with Flask-Login"
readme = "README.md"
authors = ["Marcel Kröker <kroeker.marcel@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-login = "^0.5.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
flake8 = "^3.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
