[tool.poetry]
name = "flask-authorization"
repository = "https://github.com/mkrd/flask-authorization"
version = "1.6"
description = "Simple user authorization to use alongside with Flask-Login"
readme = "README.md"
authors = ["Marcel Kröker <kroeker.marcel@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = ">=2.0.1, <3.0.0"
flask-login = ">=0.5.0, <1.0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
flake8 = "^3.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
